--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,11 +1,15 @@
-/* 
+label {
+    font-size: 2.5rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 1rem;
+    display: block;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.tarea-item:hover .eliminar-btn {
+    display: inline-block !important;
+}
 
-*/
+.list-group-item {
+    position: relative;
+}
